fix for Task2Test